// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navigation /> should match snapshot 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #f8f8f8;
  stroke: #f8f8f8;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c7 *[stroke*='#'],
.c7 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*='#'],
.c7 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c13 *[stroke*='#'],
.c13 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*='#'],
.c13 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: component-sidebar;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100%;
  width: 220px;
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 0px;
  padding-right: 0px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 0px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c8 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  width: 100%;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus > circle,
.c11:focus > ellipse,
.c11:focus > line,
.c11:focus > path,
.c11:focus > polygon,
.c11:focus > polyline,
.c11:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) > circle,
.c11:focus:not(:focus-visible) > ellipse,
.c11:focus:not(:focus-visible) > line,
.c11:focus:not(:focus-visible) > path,
.c11:focus:not(:focus-visible) > polygon,
.c11:focus:not(:focus-visible) > polyline,
.c11:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width:768px) {
  .c0 {
    padding-top: 12px;
    padding-bottom: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c0 {
    padding-left: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c0 {
    padding-right: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <a
      href="/"
    >
      <div
        class="c2"
      >
        <img
          alt="ROSE Wallet logo"
          src="IMAGE_MOCK"
        />
      </div>
    </a>
  </div>
  <div
    class="c3"
  />
  <div
    class="c4"
  >
    <nav
      class="c5"
    >
      <a
        aria-current="page"
        aria-label="menu.home"
        class="active"
        data-testid="nav-home"
        href="/"
      >
        <div
          class="c6"
        >
          <svg
            aria-label="Home"
            class="c7"
            viewBox="0 0 24 24"
          >
            <path
              d="m1 11 11-9 11 9m-8 12v-8H9v8m-5 0V9m16 14V9"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c8"
          />
          <span
            class="c9"
          >
            menu.home
          </span>
        </div>
      </a>
      <div
        class="c3"
      />
      <div
        class="c3"
      />
      <div
        class="c3"
      />
      <div
        class="c3"
      />
    </nav>
  </div>
  <div
    class="c3"
  />
  <nav
    class="c10"
  >
    <button
      aria-label="theme.darkMode"
      class="c11"
      type="button"
    >
      <div
        class="c12"
      >
        <svg
          aria-label="theme.darkMode"
          class="c13"
          viewBox="0 0 24 24"
        >
          <path
            d="M9.874 5.008c2.728-1.68 6.604-1.014 8.25.197-2.955.84-5.11 3.267-5.242 6.415-.18 4.28 3.006 6.588 5.24 7.152-1.964 1.343-4.36 1.293-5.235 1.172-3.568-.492-6.902-3.433-7.007-7.711-.106-4.278 2.573-6.35 3.994-7.225z"
            fill="none"
            stroke="#000"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <div
          class="c8"
        />
        <span
          class="c9"
        >
          theme.darkMode
        </span>
      </div>
    </button>
    <div
      class="c3"
    />
    <a
      aria-label="GitHub"
      href="https://github.com/oasisprotocol/oasis-wallet-web"
      rel="noopener"
      target="_blank"
    >
      <div
        class="c12"
      >
        <svg
          aria-label="Github"
          class="c13"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.999 1C5.926 1 1 5.925 1 12c0 4.86 3.152 8.983 7.523 10.437.55.102.75-.238.75-.53 0-.26-.009-.952-.014-1.87-3.06.664-3.706-1.475-3.706-1.475-.5-1.27-1.221-1.61-1.221-1.61-.999-.681.075-.668.075-.668 1.105.078 1.685 1.134 1.685 1.134.981 1.68 2.575 1.195 3.202.914.1-.71.384-1.195.698-1.47-2.442-.278-5.01-1.222-5.01-5.437 0-1.2.428-2.183 1.132-2.952-.114-.278-.491-1.397.108-2.91 0 0 .923-.297 3.025 1.127A10.536 10.536 0 0 1 12 6.32a10.49 10.49 0 0 1 2.754.37c2.1-1.424 3.022-1.128 3.022-1.128.6 1.514.223 2.633.11 2.911.705.769 1.13 1.751 1.13 2.952 0 4.226-2.572 5.156-5.022 5.428.395.34.747 1.01.747 2.037 0 1.47-.014 2.657-.014 3.017 0 .295.199.637.756.53C19.851 20.979 23 16.859 23 12c0-6.075-4.926-11-11.001-11"
            fill="#333"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="c8"
        />
        <span
          class="c9"
        >
          GitHub
        </span>
      </div>
    </a>
  </nav>
</div>
`;

exports[`<Navigation /> with account opened should match snapshot 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #f8f8f8;
  stroke: #f8f8f8;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c7 *[stroke*='#'],
.c7 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*='#'],
.c7 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c11 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c11 *[stroke*='#'],
.c11 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*='#'],
.c11 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: component-sidebar;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100%;
  width: 220px;
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 0px;
  padding-right: 0px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding: 0px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 12px;
}

.c8 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c9 {
  font-size: 18px;
  line-height: 24px;
}

.c13 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  width: 100%;
}

.c13:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c13:focus > circle,
.c13:focus > ellipse,
.c13:focus > line,
.c13:focus > path,
.c13:focus > polygon,
.c13:focus > polyline,
.c13:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c13:focus::-moz-focus-inner {
  border: 0;
}

.c13:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c13:focus:not(:focus-visible) > circle,
.c13:focus:not(:focus-visible) > ellipse,
.c13:focus:not(:focus-visible) > line,
.c13:focus:not(:focus-visible) > path,
.c13:focus:not(:focus-visible) > polygon,
.c13:focus:not(:focus-visible) > polyline,
.c13:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c13:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width:768px) {
  .c0 {
    padding-top: 12px;
    padding-bottom: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c0 {
    padding-left: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c0 {
    padding-right: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <a
      href="/"
    >
      <div
        class="c2"
      >
        <img
          alt="ROSE Wallet logo"
          src="IMAGE_MOCK"
        />
      </div>
    </a>
  </div>
  <div
    class="c3"
  />
  <div
    class="c4"
  >
    <nav
      class="c5"
    >
      <a
        aria-current="page"
        aria-label="menu.home"
        class="active"
        data-testid="nav-home"
        href="/"
      >
        <div
          class="c6"
        >
          <svg
            aria-label="Home"
            class="c7"
            viewBox="0 0 24 24"
          >
            <path
              d="m1 11 11-9 11 9m-8 12v-8H9v8m-5 0V9m16 14V9"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c8"
          />
          <span
            class="c9"
          >
            menu.home
          </span>
        </div>
      </a>
      <div
        class="c3"
      />
      <a
        aria-label="menu.wallet"
        class=""
        data-testid="nav-myaccount"
        href="/account/dummy"
      >
        <div
          class="c10"
        >
          <svg
            aria-label="Money"
            class="c11"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 16c0-1.105-3.134-2-7-2s-7 .895-7 2 3.134 2 7 2 7-.895 7-2zM2 16v4.937C2 22.077 5.134 23 9 23s7-.924 7-2.063V16M9 5c-4.418 0-8 .895-8 2s3.582 2 8 2M1 7v5c0 1.013 3.582 2 8 2M23 4c0-1.105-3.1-2-6.923-2-3.824 0-6.923.895-6.923 2s3.1 2 6.923 2S23 5.105 23 4zm-7 12c3.824 0 7-.987 7-2V4M9.154 4v10.166M9 9c0 1.013 3.253 2 7.077 2C19.9 11 23 10.013 23 9"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c8"
          />
          <span
            class="c9"
          >
            menu.wallet
          </span>
        </div>
      </a>
      <div
        class="c3"
      />
      <a
        aria-label="menu.stake"
        class=""
        data-testid="nav-stake"
        href="/account/dummy/stake"
      >
        <div
          class="c10"
        >
          <svg
            aria-label="LineChart"
            class="c11"
            viewBox="0 0 24 24"
          >
            <path
              d="m1 16 7-7 5 5L23 4M0 22h23.999M16 4h7v7"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c8"
          />
          <span
            class="c9"
          >
            menu.stake
          </span>
        </div>
      </a>
      <div
        class="c3"
      />
      <a
        aria-label="MockParaTimesLabel"
        class=""
        data-testid="nav-paratime"
        href="/dummy"
      >
        <div
          class="c10"
        >
          <svg
            aria-label="Inherit"
            class="c11"
            viewBox="0 0 24 24"
          >
            <path
              d="m17 18-5-3 5 3zM7 18l5-3v-4m5 9a3 3 0 1 0 6 0 3 3 0 0 0-6 0zM4 17a3 3 0 1 0 0 6 3 3 0 0 0 0-6zM17 6a5 5 0 1 1-10.001-.001A5 5 0 0 1 17 6z"
              fill="none"
              stroke="#231F20"
              stroke-width="2"
            />
          </svg>
          <div
            class="c8"
          />
          <span
            class="c9"
          >
            MockParaTimesLabel
          </span>
        </div>
      </a>
      <div
        class="c3"
      />
      <a
        aria-label="menu.fiatOnramp"
        class=""
        href="/account/dummy/fiat"
      >
        <div
          class="c10"
        >
          <svg
            aria-label="CreditCard"
            class="c11"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 5c0-.552.44-1 1.002-1h19.996A1 1 0 0 1 23 5v14c0 .552-.44 1-1.002 1H2.002A1 1 0 0 1 1 19V5zm0 3h22v2H1V8zm4 7h2v.5H5V15zm5 0h6v.5h-6V15z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
          <div
            class="c8"
          />
          <span
            class="c9"
          >
            menu.fiatOnramp
          </span>
        </div>
      </a>
    </nav>
  </div>
  <div
    class="c3"
  />
  <nav
    class="c12"
  >
    <button
      aria-label="menu.closeWallet"
      class="c13"
      type="button"
    >
      <div
        class="c10"
      >
        <svg
          aria-label="Logout"
          class="c11"
          viewBox="0 0 24 24"
        >
          <path
            d="M13 9V2H1v20h12v-7m9-3H5m12-5 5 5-5 5"
            fill="none"
            stroke="#231F20"
            stroke-width="2"
          />
        </svg>
        <div
          class="c8"
        />
        <span
          class="c9"
        >
          menu.closeWallet
        </span>
      </div>
    </button>
    <div
      class="c3"
    />
    <a
      aria-label="GitHub"
      href="https://github.com/oasisprotocol/oasis-wallet-web"
      rel="noopener"
      target="_blank"
    >
      <div
        class="c10"
      >
        <svg
          aria-label="Github"
          class="c11"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.999 1C5.926 1 1 5.925 1 12c0 4.86 3.152 8.983 7.523 10.437.55.102.75-.238.75-.53 0-.26-.009-.952-.014-1.87-3.06.664-3.706-1.475-3.706-1.475-.5-1.27-1.221-1.61-1.221-1.61-.999-.681.075-.668.075-.668 1.105.078 1.685 1.134 1.685 1.134.981 1.68 2.575 1.195 3.202.914.1-.71.384-1.195.698-1.47-2.442-.278-5.01-1.222-5.01-5.437 0-1.2.428-2.183 1.132-2.952-.114-.278-.491-1.397.108-2.91 0 0 .923-.297 3.025 1.127A10.536 10.536 0 0 1 12 6.32a10.49 10.49 0 0 1 2.754.37c2.1-1.424 3.022-1.128 3.022-1.128.6 1.514.223 2.633.11 2.911.705.769 1.13 1.751 1.13 2.952 0 4.226-2.572 5.156-5.022 5.428.395.34.747 1.01.747 2.037 0 1.47-.014 2.657-.014 3.017 0 .295.199.637.756.53C19.851 20.979 23 16.859 23 12c0-6.075-4.926-11-11.001-11"
            fill="#333"
            fill-rule="evenodd"
          />
        </svg>
        <div
          class="c8"
        />
        <span
          class="c9"
        >
          GitHub
        </span>
      </div>
    </a>
  </nav>
</div>
`;
